grammar
expr            -> term expr_tail
expr_tail       -> + term expr_tail
                 | - term expr_tail
                 | empty
term            -> factor term_tail
term_tail       -> * factor term_tail
                 | / factor term_tail
                 | empty
factor          -> ( expr )
                 | NUMBER
